# youtube-to-xml

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  PLAN-auto.md  PROJECT_INDEX.json  README.md  learnings_yt-dlp.md  next.md  plan.exception-handling-align.md  planpr.md  pyproject.toml  report.md  tmp.next.md  tmp.plan.excepts-align.md  xNEXT.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: coderabbit.md  coderabbit2.md  commit.md  merge-cleanup.md
.cursor/rules/: git-template.mdc  uv-workflows.mdc
docs/: SPEC.md  demo-analysing-transcripts-with-claude-code.md  idea-core.md  idea-evals.md  terminology.md
docs/handovers/: 01-to-xml-builder.md  04-error-handling-cli.md  05-write-readme.md  dont-worry-you-idiot.md
docs/images/: readme.cover.orig.md
docs/knowledge/: git-branch-flow.md  manage-mcps-nicely.md  rate-limit-lessons.md  uv-workflows.md  working-notes.md
docs/knowledge/api-yt_dlp/: 1.learnings.md  2-error-explore.md  2.error.analysis.md  FAQ.md  README.md  learnings.md
docs/knowledge/hooks-slashies/: 0-about.md  1-practical-guide.md  2-strategic-benefits.md  3-project-index-analysis.md  4-beyond-code.md  5-shell-scripts-explained.md
docs/knowledge/youtube-yt-dlp/: status-stash.md  test-errors.md
docs/misc/: git-branch-flow.md  manage-mcps-nicely.md  working-notes.md
docs/plan-01/: v1.request.md  v1.response-sonnet.md  v2.request.md  v2.response-sonnet.md  v2.response-x-claudeai.md
docs/plans/: 04-cli-and-errors.md
docs/plans/01-initial/: pick-best-plan.md  v1.request.md  v1.response-opus.md  v1.response-sonnet.md  v2.request.md  v2.response-opus.md  v2.response-sonnet.md  v2.response-x-claudeai.md
docs/plans/04-refactor-for-auto/: PLAN-auto.md  on-logging.md  on-naming-and-services.md  phase1-evaluate.md  phase1-report.md  reject-plan-refine.md  x_change_plan_go_incremental.md  x_use_logging_before_PR.md
docs/plans/05-try-auto-again/: 01-review-architecture__P.md  01-review-architecture__R.md  02-expore-A__P.md  02-expore-A__R.md  02-expore-B__P.md  02-expore-B__R.md  02-then-chose-B.md  03-align-script-b4-integrate__P.md  04-propose-integration-architecture__P.md  04-response1-original__R.md  04-response2-imporved__R.md  1-review-architecture_R.md  2-explore-a_P.md  2-explore-a_R.md  2-explore-b_P.md  2-explore-b_R.md  3-choosing.md  4-chose-B.md  6-do-models.py_P.md  6-response1_orig.md  6-response2_improved.md  x_next_instruction_align.md
docs/plans/06-auto-integrate/: 01.0-craft-PRs-integration__P.md  01.1-nice-pr-plan.md  01.2-PLAN-CHECKER__PR.md  01.2-nice-pr-plan.md  01.3-plan-checked-report.md  01.3-plan-checker__PR.md  02.0-nice-pr-plan.md  02.1-plan-checked-report.md  03.0-nice-pr-plan.md  03.1-plan-checked-report.md  04.0-nice-pr-plan.md  04.0-pr4-plan-claude.md  04.0-pr5-plan-claude.md  04.0-pr6-plan-detailed.md
docs/plans/plan-01/: v1.response-opus.md
docs/prompts/: compare-url-file-methods.md  compare-url-legacy-new.md
docs/prompts/code-quality/: 1-draft.md  2-claudeai.md  3-console.md
docs/refactor-do/: fix-url-report.md  ideas.md  inline-timestamps.md
docs/refactor-done/: inline-timestamps.md
docs/refactor-done/exceptions/: done_centralise.md  test_file.md  test_url.md
docs/refactor-todo/: ideas.md
docs/refactor-todo/exceptions/: centralise.md  done_centralise.md  fix-url-prompt.md  fix-url-report.md  manual_file.md  manual_url.md  missing.md  test_file.md  test_url.md
example_transcripts/: build-an-ai-powered-job-board-from-scratch-with-nextjs-15-drizzle-tailwind.xml  how-claude-code-hooks-save-me-hours-daily.txt  how-claude-code-hooks-save-me-hours-daily.txt.xml  how-claude-code-hooks-save-me-hours-daily.xml  introduction-to-cows.txt  introduction-to-cows.xml  pick-up-where-you-left-off-with-claude.xml  rick-astley-never-gonna-give-you-up-official-video-4k-remaster.txt  rick-astley-never-gonna-give-you-up-official-video-4k-remaster.xml  x0-chapters-invalid-format.txt  x3-chapters-with-blanks.txt  x3-chapters-with-blanks.xml  x4-chapters.xml
scripts/: temp_raw_yt_dlp.py  test_xml_builder_manual.py  transcript_auto_fetcher.py  transcript_reporter.py  url_to_transcript.py  youtube_transcript_fetcher.py
src/youtube_to_xml/: __init__.py  cli.py  exceptions.py  file_parser.py  logging_config.py  models.py  parser.py  time_utils.py  transcript_auto_fetcher_wrapper.py  url_parser.py  url_to_transcript_wrapper.py  xml_builder.py
tests/: __init__.py  test_cli.py  test_end_to_end.py  test_exceptions.py  test_exceptions_url.py  test_exceptions_ytdlp.py  test_file_parser.py  test_file_parser_document.py  test_integration.py  test_models.py  test_parser.py  test_placeholder.py  test_time_utils.py  test_url_parser.py  test_url_to_transcript.py  test_xml_builder.py
transcript_files/: 07-mins-07-chapters-389-lines.txt  advanced-claude-code-45min.txt  advanced-claude-code-45min.xml  nextjs-tutorial-11hrs.txt  nextjs-tutorial-11hrs.xml  sample-00-chapters.txt  sample-11-chapters.txt  x0-chapters.txt  x3-chapters-blanks.xml  x9-chapters.txt  x9-chapters.xml  xx_transcript-from-url-fetch.xml
